<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sisra</string>
    <string name="titulo_conta">Sisra - Conta</string>
    <string name="titulo_mesa">Sisra - Mesa</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="servidor">Servidor:Porta</string>
    <string name="porta">:</string>
    <string name="entrar">Entrar</string>
    <string name="desc_img_logo">Imagem de logo</string>
    <string name="dialog_conectar_titulo">Conexão com servidor</string>
    <string name="dialog_conectar_mensagem_sucesso">Conectado com sucesso.</string>
    <string name="dialog_conectar_mensagem_erro">Erro na conexão. Verifique as informações no formulário.</string>
    <string name="total_label">Total: R$ </string>
    <string name="preco_label">Preço: R$ </string>
    <string name="codigo_label">Cód.: </string>
    <string name="quantidade_label">Qntd.: </string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_salvar">Salvar</string>
    <string name="label_descricao">Descrição:</string>
    <string name="txt_adicionar_conta">Adicionar Conta</string>

</resources>