<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
     >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:contentDescription="@string/desc_img_logo"
        android:src="@drawable/logo_sistema_temp" />

    <TextView
        android:id="@+id/txtServidor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servidor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edtServidor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        

        <TextView
            android:id="@+id/txtPorta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porta"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edtPorta"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.34"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>
    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar" 
        />

</LinearLayout>