<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="10" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_conta_descricao"
                android:textColor="#ffffff"
                android:background="#bcbcbc"
                android:layout_width="fill_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/label_descricao"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edt_conta_descricao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8.8"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:background="#bcbcbc"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:weightSum="10" >

        <Button
            android:id="@+id/btn_conta_cancelar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:drawableLeft="@drawable/ic_btn_cancel"
            android:text="@string/btn_cancelar" />

        <Button
            android:id="@+id/btn_conta_salvar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/btn_salvar"
            android:drawableLeft="@drawable/ic_btn_salvar"
             />
    </LinearLayout>

</LinearLayout>