<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/id_list_itens_listagem_icone"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_gravity="center_vertical|center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@drawable/ic_itens"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_itens" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="10sp"
        android:paddingTop="10sp" >

        <TextView
            android:id="@+id/id_list_itens_listagem_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
           android:textStyle="bold"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10sp" >

            <TextView
                android:id="@+id/id_list_itens_listagem_codigo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigo_label"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/id_list_itens_listagem_codigo_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:text="AABBCC"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10sp">

            <TextView
                android:id="@+id/id_list_itens_listagem_preco_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco_label"
                android:textStyle="bold"
                android:textColor="#0000ff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/id_list_itens_listagem_preco_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:text="00,00"
                android:textColor="#0000ff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_weight="0"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@drawable/ic_action_next_item"
            android:src="@drawable/ic_action_next_item" />
    </LinearLayout>

</LinearLayout>